# dioxus_serverfn_example

./: Cargo.toml  Dioxus.toml
src/: main.rs
