[package]
name = "dioxus-serverfn-example"
version = "0.1.0"
authors = ["connemignonne <mountaintops@outlook.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
dioxus-html-macro = "0.3.0"
sqlite = { version="0.36.0", optional=true }
lazy_static = "1.4.0"
wasm-logger = "0.2.0"

[features]
default = []
server = ["dioxus/axum", "sqlite"]
web = ["dioxus/web"]
